Style and documentation change

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-round-slider",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "React round slider component, using SVG and javascript",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,15 @@
     "type": "git",
     "url": "git+https://github.com/Solitaryo/react-round-slider.git"
   },
-  "keywords": ["react", "round", "slider", "javascript", "es6", "es2016", "jsx"],
+  "keywords": [
+    "react",
+    "round",
+    "slider",
+    "javascript",
+    "es6",
+    "es2016",
+    "jsx"
+  ],
   "author": "Oscar Gallo <solitaryo@gmail.com> (https://solitaryo.github.io/)",
   "license": "GNU GPLv3.0",
   "bugs": {
@@ -37,6 +45,8 @@
   },
   "jest": {
     "setupTestFrameworkScriptFile": "<rootDir>/test/setup/setupTest.js",
-    "testPathIgnorePatterns": ["<rootDir>/tests/setup/"]
+    "testPathIgnorePatterns": [
+      "<rootDir>/tests/setup/"
+    ]
   }
 }
